--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
                         <li><a href="#experience" class="text-gray-400 hover:text-white transition">Experience</a></li>
                         <li><a href="#projects" class="text-gray-400 hover:text-white transition">Projects</a></li>
                         <li><a href="#contact" class="text-gray-400 hover:text-white transition">Contact</a></li>
-                        <li><a href="resume.pdf" target="_blank" class="text-gray-400 hover:text-white transition">Resume</a></li>
+                        <li><a href="Vempati_Keerthi_2023101005_2025.pdf" target="_blank" class="text-gray-400 hover:text-white transition">Resume</a></li>
                     </ul>
                 </div>
 </div>
